# OCCAstft

./: .gitignore  CL_Embedder.py  CMakeLists.txt  CMakePresets.json  CompiledCLC.txt  KERNEL_Embedder.py  LICENSE  PTX_Embedder.py  README.md  capnpsetter.sh  clfftsetter.sh  docker_ptx_builder.sh  kernel_build.sh  miniaudio.c  miniaudio.h  nvccPtxBuild.sh  position_setter_for_docker.sh  proxy.puml
OKL/: EXP10.okl  EXP11.okl  EXP6.okl  EXP7.okl  EXP8.okl  EXP9.okl  EXPCommon.okl  Radix10.okl  Radix11.okl  Radix6.okl  Radix7.okl  Radix8.okl  Radix9.okl  RadixCommon.okl  STFT_MAIN.okl
ProfileResults/: clFFTResultOnNvdiaH100.json  clFFTResultOnNvidiaH100.json  cuFFTResultOnNvidiaH100.json  merged_csv.py  merged_fft_results.csv  occaResultOnNvidiaH100.json  window-batch.py
Profile_Code/: profileRunners.cpp
StandAlone/: CMakeLists.txt
StandAlone/Profile_Code/: profileRunners.cpp
StandAlone/cross_gpgpu/CUDA/: CMakeLists.txt
StandAlone/cross_gpgpu/GLOBAL/: RunnerCommon.cpp  RunnerInterface.hpp
StandAlone/cross_gpgpu/METAL/: CMakeLists.txt
StandAlone/cross_gpgpu/OpenCL/: CMakeLists.txt
StandAlone/cross_gpgpu/OpenMP/: CMakeLists.txt
StandAlone/cross_gpgpu/RunnerTemplate/: CMakeLists.txt
StandAlone/cross_gpgpu/Serial/: CMakeLists.txt
StandAlone/cross_gpgpu/occaprofileRunner/: CMakeLists.txt
StandAlone/cross_gpgpu/occaprofileRunner/kernel/: okl_embed_52.hpp  okl_embed_52_11_6.hpp  okl_embed_52_12_1.hpp  okl_embed_52_12_3.hpp  okl_embed_61_11_6.hpp  okl_embed_61_12_1.hpp  okl_embed_61_12_3.hpp  okl_embed_70.hpp  okl_embed_70_.hpp  okl_embed_70_11_6.hpp  okl_embed_70_12_1.hpp  okl_embed_70_12_3.hpp  okl_embed_75.hpp  okl_embed_75_.hpp  okl_embed_75_11_6.hpp  okl_embed_75_12_1.hpp  okl_embed_75_12_3.hpp  okl_embed_80_11_6.hpp  okl_embed_80_12_1.hpp  okl_embed_80_12_3.hpp  okl_embed_90.hpp  okl_embed_90_12_1.hpp  okl_embed_90_12_3.hpp
StandAlone/cross_gpgpu/occaprofileRunner/src/: CudaImpl.cpp
StandAlone/cross_gpgpu/testRunner/: CMakeLists.txt
StandAlone/include/: FFTStruct.hpp  FFTcapnp.capnp  FFTcapnp.capnp.h  STFTProxy.hpp  UpdateCapnpSource.sh
StandAlone/src/: FFTStruct.cpp  FFTStruct_SetGet.cpp  FFTStruct_linux.cpp  FFTcapnp.capnp.c++  STFTProxy.cpp  runtimeChecker.cpp
cross_gpgpu/CUDA/: CMakeLists.txt
cross_gpgpu/CUDA/include/: cudaStruct.hpp
cross_gpgpu/CUDA/kernel/: R10compiled.cu  R11compiled.cu  compiled.cu  compiled.ptx  compiled_coda.hpp  compiled_cuda.cu  compiled_cuda.hpp  compiled_cuda.ptx  compiled_cuda_debug.ptx  okl_embed.hpp  okl_embed_52_.hpp  okl_embed_52_11_6.hpp  okl_embed_52_12_1.hpp  okl_embed_52_12_3.hpp  okl_embed_61.hpp  okl_embed_61_.hpp  okl_embed_61_11_6.hpp  okl_embed_61_12_1.hpp  okl_embed_61_12_3.hpp  okl_embed_70.hpp  okl_embed_70_11_6.hpp  okl_embed_70_12_1.hpp  okl_embed_70_12_3.hpp  okl_embed_75.hpp  okl_embed_75_11_6.hpp  okl_embed_75_12_1.hpp  okl_embed_75_12_3.hpp  okl_embed_80.hpp  okl_embed_80_.hpp  okl_embed_80_12_3.hpp  okl_embed_90.hpp  okl_embed_90_.hpp  okl_embed_90_11_6.hpp  outputtest.cubin  radix10.cu  radix10.ptx  radix11.cu  radix11.ptx  radix12.cu  radix12.ptx  (+57 more)
cross_gpgpu/CUDA/src/: CudaImpl.cpp  STFT.cpp  functionImpl.cpp
cross_gpgpu/GLOBAL/: RunnerCommon.cpp  RunnerInterface.hpp  STFT.hpp
cross_gpgpu/HIP/: CMakeLists.txt
cross_gpgpu/HIP/kernel/: compiled.hpp
cross_gpgpu/METAL/kernel/: compiled.hpp
cross_gpgpu/OpenCL/: CMakeLists.txt
cross_gpgpu/OpenCL/CL_Wrapper/include/: CL_Wrapper.h  cl_FACADE.h  cl_global_custom.h
cross_gpgpu/OpenCL/CL_Wrapper/src/: cl_global_custom.cpp
cross_gpgpu/OpenCL/include/: STFT.hpp  clStruct.hpp
cross_gpgpu/OpenCL/kernel/: okl_embed.hpp  okl_embedded.h  temp.txt
cross_gpgpu/OpenCL/src/: CLImpl.cpp  STFT.cpp  functionImpl.cpp
cross_gpgpu/OpenMP/: CMakeLists.txt
cross_gpgpu/OpenMP/kernel/: R10compiled.hpp  R11compiled.hpp  compiled.hpp  compiled_code.hpp  compiled_opemmp.hpp
cross_gpgpu/OpenMP/src/: OpenmpImpl.cpp  functionImpl.cpp
cross_gpgpu/RunnerTemplate/src/: TemplateImpl.cpp
cross_gpgpu/Serial/: CMakeLists.txt
cross_gpgpu/Serial/kernel/: compiled.hpp  compiled_serial.hpp
cross_gpgpu/Serial/src/: SerialImpl.cpp
cross_gpgpu/cudaprofileRunner/: CMakeLists.txt
cross_gpgpu/cudaprofileRunner/kernel/: okl_embed.hpp  radixALL.cu  radixALL.ptx  temp.txt
cross_gpgpu/cudaprofileRunner/src/: CudaImpl.cpp
cross_gpgpu/testRunner/: CMakeLists.txt
cross_gpgpu/testRunner/include/: clfftImpl.hpp  template.hpp
cross_gpgpu/testRunner/kernel/: okl_embed.hpp
cross_gpgpu/testRunner/src/: clfftImpl.cpp  testRunner.cpp
include/: FFTStruct.hpp  FFTcapnp.capnp  FFTcapnp.capnp.c++  FFTcapnp.capnp.h  KERNEL_Embedder.py  Radix10.okl  Radix11.okl  Radix12.okl  Radix13.okl  Radix14.okl  Radix15.okl  Radix6.okl  Radix7.okl  Radix8.okl  Radix9.okl  RadixALL.okl  RadixCommon.okl  STFT.h  STFTProxy.hpp  STFTinterface.hpp  kernel.okl  okl_embedded.h  runtimeChecker.hpp  webSTFTclient.hpp
nsight compute profile/: Final Tests.ncu-proj
nsight compute profile/float100000/: Radix-10_1.ncu-rep  Radix-11_1.ncu-rep  Radix-12_1.ncu-rep  Radix-13_1.ncu-rep  Radix-14_1.ncu-rep  Radix-15_1.ncu-rep
nsight compute profile/float1000000/: Radix-10_1.ncu-rep  Radix-11_1.ncu-rep  Radix-12_1.ncu-rep  Radix-13_1.ncu-rep  Radix-14_1.ncu-rep  Radix-15_1.ncu-rep
nsight compute profile/float10000000/: Radix-10_1.ncu-rep  Radix-11_1.ncu-rep  Radix-12_1.ncu-rep  Radix-13_1.ncu-rep  Radix-14_1.ncu-rep  Radix-15_1.ncu-rep
nsight compute profile/float100000000/: Radix-10_1.ncu-rep  Radix-11_1.ncu-rep  Radix-12_1.ncu-rep  Radix-13_1.ncu-rep  Radix-14_1.ncu-rep  Radix-15_1.ncu-rep
occaSample/: CMakeLists.txt  occaSample.cpp  occaSample.hpp
opencl_legacy/: CMakeLists.txt  LICENSE
opencl_legacy/include/: STFT.h
opencl_legacy/src/: STFT.cpp
src/: FFTStruct.cpp  FFTStruct_SetGet.cpp  FFTStruct_linux.cpp  FFTStruct_windows.cpp  FFTcapnp.capnp.c++  STFT.cpp  STFTProxy.cpp  STFTinterface.cpp  main.cpp  occa.cpp  runtimeChecker.cpp  template.cpp  webSTFTclient.cpp
src/tests/: tt.cpp
test/: btest.py  proxyTester.cpp  test_fft_struct.cpp
(+132 files in other folders)
